2008-06-26  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	Patch by: Sam Morris <sam at robots dot org to uk>

	* gst-libs/gst/interfaces/mixertrack.c:
	(gst_mixer_track_class_init), (gst_mixer_track_get_property),
	(gst_mixer_track_set_property):
	API: Add "index" property to GstMixerTrack to differantiate between
	multiple mixer tracks with the same label.

	* ext/alsa/gstalsamixeroptions.c: (gst_alsa_mixer_options_new):
	* ext/alsa/gstalsamixertrack.c: (gst_alsa_mixer_track_new):
	Set the "index" property of GstMixerTrack to the index given by ALSA.
	Fixes bug #528299.

2008-06-25  Stefan Kost  <ensonic@users.sf.net>

	* tests/examples/seek/Makefile.am:
	* tests/examples/seek/seek.c:
	  Remove libgstvideo usage. Use gtk_get_option_group instead of
	  gtk_init().

2008-06-24  Stefan Kost  <ensonic@users.sf.net>

	* tests/check/Makefile.am:
	  Name the test registry format neutral.

2008-06-24  Stefan Kost  <ensonic@users.sf.net>

	* gst/playback/gstqueue2.c:
	  Do not double notify. Remove the unsued return value.

2008-06-24  Stefan Kost  <ensonic@users.sf.net>

	* ext/alsa/gstalsamixer.c:
	  Also consider "speaker" as a name for master volume. If that doesn't
	  help look for the first non-mono volume control that also has a
	  playback switch.

2008-06-24  Stefan Kost  <ensonic@users.sf.net>

	* ChangeLog:
	  Forgot to save the ChangeLog :/

2008-06-24  Stefan Kost  <ensonic@users.sf.net>

	* tests/examples/seek/Makefile.am:
	* tests/examples/seek/seek.c:
	  Embedd the xwindow. Allow to play multiple files.

2008-06-24  Jan Schmidt  <jan.schmidt@sun.com>

	* sys/ximage/ximagesink.c (gst_ximagesink_ximage_put),
	(gst_ximagesink_setcaps):
	* sys/ximage/ximagesink.h:
	When the caps change, make sure to re-draw borders in
	force-aspect-ratio=true mode.
	* sys/xvimage/xvimagesink.c (gst_xvimagesink_xvimage_put):
	Don't clear the border_draw flag until we actually draw the border.
	* tests/check/Makefile.am: